Client suggested Modifications

--- a/views/buySubscription.ejs
+++ b/views/buySubscription.ejs
@@ -74,10 +74,10 @@
                 <label for="mobile">Mobile No. linked with Aadhar:</label>
                 <input type="text" id="mobile" name="mobile" required>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="aadhar">Aadhar No.:</label>
                 <input type="text" id="aadhar" name="aadhar" required>
-            </div>
+            </div> -->
             <button type="submit" class="btn" onclick="goForward()">Proceed to Payment</button>
             <button type="button" class="btn btn-back" onclick="goBackToHome()">Back to Homepage</button>
         </form>
