--- a/views/createProject.ejs
+++ b/views/createProject.ejs
@@ -56,6 +56,11 @@
         button:hover {
             background-color: #218838;
         }
+        .data-safety-notice {
+            margin-top: 15px;
+            font-size: 14px;
+            color: #555;
+        }
     </style>
 </head>
 <body>
@@ -69,6 +74,7 @@
             <input type="url" name="photoUrl" placeholder="Photo URL" required>
             <button type="submit">Create</button>
         </form>
+        <p class="data-safety-notice">Your data is encrypted and safe with us.</p>
     </div>
 </body>
 </html>
