--- a/views/successPay.ejs
+++ b/views/successPay.ejs
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Payment Successful</h1>
+        <h1>Now You have LifeTime access to BharaKetNagrik</h1>
         <p id="paymentDetails"></p>
         <div class="buttons">
             <a href="/dashboard" class="btn dashboard">Go to Dashboard</a>
