--- a/views/index.ejs
+++ b/views/index.ejs
@@ -161,7 +161,7 @@
                 "amount": order.amount, // Amount is in the smallest currency unit
                 "currency": order.currency,
                 "name": "BharaKetNagrik App",
-                "description": "Test Transaction",
+                "description": "Transaction",
                 "order_id": order.id,
                 "handler": function (response){
                     fetch('/verify', {
