--- a/views/partials/primaryHeader.ejs
+++ b/views/partials/primaryHeader.ejs
@@ -1,34 +1,55 @@
-<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-<style>
-  @media (min-width: 768px) {
-    .subnav {
-      flex-direction: row;
-      justify-content: flex-end;
-    }
-  }
-</style>
-<div class="sticky shadow top-0 border-b-2" style="z-index: 1000;">
-  <div class="antialiased bg-gray-100 dark-mode:bg-gray-900">
-    <div class="w-full text-gray-700 bg-white dark-mode:text-gray-200 dark-mode:bg-gray-800">
-      <div x-data="{ open: false }" class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
-        <div class="flex flex-row items-center justify-between p-4">
-          <a href="/" class="relative z-10 flex items-center w-auto text-2xl font-bold leading-none text-black select-none">BharatKeNagrik </a>
-          <button class="rounded-lg md:hidden focus:outline-none focus:shadow-outline" @click="open = !open">
-            <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6">
-              <path x-show="!open" fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-              <path x-show="open" fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-            </svg>
-          </button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <style>
+        @media (min-width: 768px) {
+            .subnav {
+                flex-direction: row;
+                justify-content: flex-end;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="sticky shadow top-0 border-b-2" style="z-index: 1000;">
+        <div class="antialiased bg-gray-100 dark-mode:bg-gray-900">
+            <div class="w-full text-gray-700 bg-white dark-mode:text-gray-200 dark-mode:bg-gray-800">
+                <div x-data="{ open: false }" class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
+                    <div class="flex flex-row items-center justify-between p-4">
+                        <a href="/" class="relative z-10 flex items-center w-auto text-2xl font-bold leading-none text-black select-none">
+                            BharatKeNagrik
+                        </a>
+                        <button class="rounded-lg md:hidden focus:outline-none focus:shadow-outline" @click="open = !open">
+                            <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6">
+                                <path x-show="!open" fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+                                <path x-show="open" fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                    </div>
+                    <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow hidden pb-4 md:pb-0 md:flex md:justify-end subnav md:flex-row">
+                        <a class="px-4 py-2 my-2 mx-2 leading-6 font-medium bg-transparent rounded-lg focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/">Home</a>
+                        <a class="px-4 py-2 my-2 mx-2 leading-6 font-medium bg-transparent rounded-lg focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/dashboard">Create Petition</a>
+                        <a class="px-4 py-2 my-2 mx-2 leading-6 font-medium bg-transparent rounded-lg focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/blog">Browse Petitions</a>
+                        <a class="px-4 py-2 my-2 mx-2 leading-6 font-medium bg-transparent rounded-lg focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/contact-us">Contact</a>
+
+                        <!-- Sign Up Button -->
+                        <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/user/register">Sign up</a>
+
+                        <!-- Login Button -->
+                        <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/user/login">Login</a>
+
+                        <!-- Dashboard Button (Visible after login) -->
+                        <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg text-white bg-blue-600 hover:bg-blue-500 focus:bg-blue-500 focus:outline-none focus:shadow-outline" href="/dashboard">Dashboard</a>
+
+                        <!-- Logout Button (Visible after login) -->
+                        <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg text-white bg-red-600 hover:bg-red-500 focus:bg-red-500 focus:outline-none focus:shadow-outline" href="/user/logout">Logout</a>
+                    </nav>
+                </div>
+            </div>
         </div>
-        <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow hidden pb-4 md:pb-0 md:flex md:justify-end subnav md:flex-row">
-          <a class="px-4 py-2 my-2 mx-2 leading-6  font-medium bg-transparent rounded-lg focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/">Home</a>
-          <a class="px-4 py-2 my-2 mx-2 leading-6 font-medium bg-transparent rounded-lg  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/dashboard">Create Petition</a>
-          <a class="px-4 py-2 my-2 mx-2 leading-6 font-medium bg-transparent rounded-lg  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/blog">Browse Petitions</a>
-          <a class="px-4 py-2 my-2 mx-2 leading-6 font-medium bg-transparent rounded-lg  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/contact-us">Contact</a>
-          <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/user/register">Sign up</a>
-          <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg  text-white bg-blue-600 hover:bg-blue-500 focus:bg-blue-500 focus:outline-none focus:shadow-blue-700" href="/dashboard">Dashboard</a>
-        </nav>
-      </div>
     </div>
-  </div>
-</div>
+</body>
+</html>
