--- a/views/partials/primaryHeader.ejs
+++ b/views/partials/primaryHeader.ejs
@@ -38,14 +38,22 @@
                         <!-- Sign Up Button -->
                         <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/user/register">Sign up</a>
 
+                        <% if (user) { %>
+                            <!-- <p>Hello, <%= user.username %></p> -->
+                            <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg text-white bg-red-600 hover:bg-red-500 focus:bg-red-500 focus:outline-none focus:shadow-outline" href="/user/logout">Logout</a>
+                          <% } else { %>
+                            <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/user/login">Login</a>
+                            <!-- <a href="/login">Login</a> -->
+                          <% } %>
+
                         <!-- Login Button -->
-                        <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/user/login">Login</a>
+                         
 
                         <!-- Dashboard Button (Visible after login) -->
                         <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg text-white bg-blue-600 hover:bg-blue-500 focus:bg-blue-500 focus:outline-none focus:shadow-outline" href="/dashboard">Dashboard</a>
 
                         <!-- Logout Button (Visible after login) -->
-                        <a class="px-4 py-2 my-2 mx-2 leading-6 border font-medium bg-transparent rounded-lg text-white bg-red-600 hover:bg-red-500 focus:bg-red-500 focus:outline-none focus:shadow-outline" href="/user/logout">Logout</a>
+                        
                     </nav>
                 </div>
             </div>
