--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -111,7 +111,7 @@
 
     <footer>
         <button onclick="window.location.href='/'">Home</button>
-        <button onclick="window.location.href='/create-project'">Create Project</button>
+        <button onclick="window.location.href='/upload'">Create Petition</button>
     </footer>
 </body>
 </html>
