--- a/views/display.ejs
+++ b/views/display.ejs
@@ -61,7 +61,7 @@
 <body>
   <div class="nav-buttons">
     <button onclick="window.location.href='/'">Home</button>
-    <button onclick="window.location.href='/create-project'">continue</button>
+    <button onclick="window.location.href='/enrolled'">continue</button>
   </div>
   
 
