--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -97,9 +97,9 @@
                         <h3><%= project.title %></h3>
                         <div id="project-<%= index %>">
                             <p><strong>Category:</strong> <%= project.category %></p>
-                            <p><strong>Date:</strong> <%= new Date(project.date).toLocaleDateString() %></p>
+                            <p><strong>Date:</strong> <%= project.date %></p>
                             <p><strong>Description:</strong> <%= project.description %></p>
-                            <p><strong>URL:</strong> <a href="<%= project.url %>" target="_blank"><%= project.url %></a></p>
+                            <!-- <p><strong>URL:</strong> <a href="<%= project.url %>" target="_blank"><%= project.url %></a></p> -->
                         </div>
                     </li>
                 <% }); %>
