--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -317,7 +317,7 @@
               <img src="<%= project.image %>" alt="Project Image" class="mx-auto mb-4">
               
               <button class="enroll-button" onclick="enrollpetition('<%= project._id %>')">Enroll</button>
-              <p class="text-center text-sm text-white bg-gray-800 rounded-md py-1 mb-2">Users Enrolled: <%= project.usersEnrolled.length %></p>
+              <p class="text-center text-sm text-gray-100 bg-gray-800 rounded-md py-1 mb-2">Users Enrolled: <%= project.usersEnrolled.length %></p>
           
               <div class="card-details">
                 Creator: <%= project.User %> <br>
