--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -8,91 +8,257 @@
   <link rel="stylesheet" href="/static/css/style.css">
   <script async src="https://kit.fontawesome.com/20970c5fb1.js" crossorigin="anonymous"></script>
   <title>Blog</title>
-</head>
+  <style>
+    body {
+      background-color: #f5f7fa;
+      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
 
-<body style="background-color: #f5f7fa; color: #333; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 0;">
-  <%- include("partials/primaryHeader.ejs") %>
+    h1 {
+      font-size: 3rem;
+      text-align: center;
+      margin: 20px 0;
+      color: #007BFF;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+    }
 
-  <h1 style="font-size: 3rem; text-align: center; margin: 20px 0; color: #007BFF; text-transform: uppercase; letter-spacing: 3px;">Petition Categories</h1>
+    .enroll-button {
+      background: linear-gradient(135deg, #ff416c, #ff4b2b);
+      color: white;
+      border: none;
+      padding: 12px 30px;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 30px;
+      transition: all 0.3s ease;
+    }
 
-  <form id="filter-form" class="filter-form" action="/blog/filter" method="get" style="display: none; margin: 20px auto; padding: 20px; background-color: #f9f9f9; border: 1px solid #ccc; border-radius: 20px; width: 60%; max-width: 600px;">
-    <label for="category" style="display: block; margin-bottom: 10px; font-weight: bold;">Category:</label>
-    <input type="text" id="category" name="category" style="width: calc(100% - 20px); padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 10px; box-sizing: border-box;">
-    <label for="user" style="display: block; margin-bottom: 10px; font-weight: bold;">User:</label>
-    <input type="text" id="user" name="user" style="width: calc(100% - 20px); padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 10px; box-sizing: border-box;">
-    <label for="title" style="display: block; margin-bottom: 10px; font-weight: bold;">Title:</label>
-    <input type="text" id="title" name="title" style="width: calc(100% - 20px); padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 10px; box-sizing: border-box;">
-    <button type="button" onclick="submitFilterForm()" style="background-color: #36d1dc; color: white; border: none; padding: 12px 20px; font-size: 16px; cursor: pointer; border-radius: 10px; transition: all 0.3s ease;">Submit</button>
-  </form>
+    .enroll-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 10px rgba(255, 75, 43, 0.3);
+    }
 
-  <% blogs.forEach(blog => { %>
-    <h2 class="text-4xl mt-8 font-semibold text-center" style="background-color: #007BFF; color:white; padding: 5px;">Category: <%= blog.category %></h2>
-    <div class="grid gap-12 m-12 grid-cols-1 md:grid-cols-2 xl:grid-cols-3">
-      <% blog.projects.forEach(project => { %>
-        <% if (project.status !== 'pending') { %>
-          <div class="card" style="background: #ffffff; border-radius: 20px; box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); overflow: hidden; transition: all 0.3s ease; padding: 20px; margin-bottom: 20px;">
-            <div class="card-content">
-              <% if (project.images && project.images.length > 0) { %>
-                <div class="image-gallery" style="display: flex; justify-content: center; flex-wrap: wrap;">
-                  <% project.images.forEach(image => { %>
-                    <img src="<%= image %>" alt="Project Image" style="width: 150px; height: 150px; object-fit: cover; margin: 5px; border-radius: 10px;">
-                  <% }); %>
-                </div>
-              <% } else { %>
-                <p>No images available for this project.</p>
-              <% } %>
-              <button class="enroll-button" onclick="enrollpetition('<%= project._id %>')" style="background: linear-gradient(135deg, #ff416c, #ff4b2b); color: white; border: none; padding: 12px 30px; font-size: 16px; cursor: pointer; border-radius: 30px; transition: all 0.3s ease;">Enroll</button>
-              <p class="text-center text-sm text-gray-100 bg-gray-800 rounded-md py-1 mb-2">Users Enrolled: <%= project.usersEnrolled.length %></p>
-              <div class="card-details">
-                Creator: <%= project.User %> <br>
-                Title: <%= project.title %><br>
-                Dated: <%= project.date %> <br>
-              </div>
-              <a href="https://api.whatsapp.com/send?text=Check out this petition: <%= project.title %> - <%= project.description.substring(0, 100) %> Enroll at https://bharatkenagrik.com/blog" 
-                class="whatsapp-share-button" 
-                target="_blank" 
-                style="display: inline-block; margin-top: 2px; background:#ff416c; color: white; padding: 2px 4px; border-radius: 2px; text-decoration: none;">
-                Share
-              </a>
-              <div id="<%= project._id %>" class="description short-description" style="display: block; max-height: 60px; overflow: hidden; text-overflow: ellipsis; transition: max-height 0.5s ease;">
-                <p>Description: <span class="highlight"><%= project.description %></span></p>
-              </div>
-              <span id="toggle-<%= project._id %>" class="toggle-description" onclick="toggleDescription('<%= project._id %>')" style="color: #007BFF; cursor: pointer; font-weight: bold; margin-top: 10px; transition: color 0.3s ease;">View More</span>
-            </div>
-          </div>
-        <% } %>
-      <% }) %>
-    </div>
-  <% }) %>
+    .view-more-link {
+      color: #007BFF;
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: none;
+      margin-top: 10px;
+      display: inline-block;
+      transition: color 0.3s;
+    }
+
+    .view-more-link:hover {
+      color: #ff416c;
+    }
+
+    .filter-button {
+      background: linear-gradient(135deg, #36d1dc, #5b86e5);
+      color: white;
+      padding: 15px 30px;
+      font-size: 18px;
+      border: none;
+      cursor: pointer;
+      border-radius: 50px;
+      display: block;
+      margin: 20px auto;
+      transition: all 0.3s ease;
+    }
+
+    .filter-button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 4px 8px rgba(91, 134, 229, 0.4);
+    }
+
+    .filter-container {
+      text-align: center;
+    }
+
+    .filter-form {
+      display: none;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      border: 1px solid #ccc;
+      border-radius: 20px;
+      width: 60%;
+      max-width: 600px;
+    }
+
+    .filter-form label {
+      display: block;
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
+
+    .filter-form input[type="text"] {
+      width: calc(100% - 20px);
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      box-sizing: border-box;
+    }
+
+    .filter-form button {
+      background-color: #36d1dc;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 10px;
+      transition: all 0.3s ease;
+    }
+
+    .filter-form button:hover {
+      background-color: #5b86e5;
+    }
+
+    /* Card Styling */
+    .card {
+      background: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      transition: all 0.3s ease;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    }
+
+    .card img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 15px;
+      transition: transform 0.3s ease;
+    }
+
+    .card img:hover {
+      transform: scale(1.1);
+    }
+
+    .card-content {
+      text-align: center;
+    }
+
+    .card-title {
+      font-size: 22px;
+      font-weight: bold;
+      color: #333;
+      margin-bottom: 10px;
+    }
+
+    .card-details {
+      font-size: 16px;
+      color: #555;
+      margin-bottom: 15px;
+    }
+
+    .card-details a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+
+    .card-details a:hover {
+      color: #ff416c;
+      text-decoration: underline;
+    }
+
+    .short-description {
+      display: block;
+      max-height: 60px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      transition: max-height 0.5s ease;
+    }
+
+    .full-description {
+      max-height: 100%;
+    }
+
+    .toggle-description {
+      color: #007BFF;
+      cursor: pointer;
+      font-weight: bold;
+      margin-top: 10px;
+      transition: color 0.3s ease;
+    }
+
+    .toggle-description:hover {
+      color: #ff416c;
+    }
+
+    /* WhatsApp Share Button */
+    .whatsapp-share-button {
+      display: inline-block;
+      margin-top: 10px;
+      background-color: #25D366;
+      color: white;
+      padding: 12px 30px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: bold;
+      transition: all 0.3s ease;
+    }
+
+    .whatsapp-share-button:hover {
+      background-color: #1ebe58;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+  </style>
+
   <script>
-    async function enrollpetition(id) {
-      const projectId = document.getElementById(id);
-      window.location.href = `/upload/${id}`;
+       async function enrollpetition(id) {
+           const projectId = document.getElementById(id);
+    window.location.href = `/upload/${id}`;
+        
     }
     document.querySelectorAll('.enroll-button').forEach(button => {
-      button.addEventListener('click', async function() {
+    button.addEventListener('click', async function() {
         const projectId = this.getAttribute('data-project-id');
         const formData = new FormData();
         formData.append('signedPdf', document.querySelector('#pdfInput').files[0]); // Assuming you have a file input for the PDF
         formData.append('projectId', projectId); // Include projectId in the form data
         window.location.href = '/upload';
         try {
-          const response = await fetch('/upload-pdf', {
-            method: 'POST',
-            body: formData
-          });
+            const response = await fetch('/upload-pdf', {
+                method: 'POST',
+                body: formData
+            });
 
-          if (response.ok) {
-            // Handle successful upload and enrollment
-            alert("You are enrolled");
-          } else {
-            alert("Something went wrong");
-          }
+            if (response.ok) {
+                // Handle successful upload and enrollment
+                alert("You are enrolled");
+            } else {
+                alert("Something went wrong");
+            }
         } catch (error) {
-          alert("An error occurred during the process.");
+            alert("An error occurred during the process.");
         }
-      });
     });
+});
+    function toggleDetails(id) {
+      var details = document.getElementById(id);
+      if (details.style.display === "none") {
+        details.style.display = "block";
+      } else {
+        details.style.display = "none";
+
+      }
+    }
     function toggleDescription(id) {
       const description = document.getElementById(id);
       const viewMoreLink = document.getElementById('toggle-' + id);
@@ -120,6 +286,73 @@
       form.submit();
     }
   </script>
+</head>
+
+<body>
+  <%- include("partials/primaryHeader.ejs") %>
+
+  <h1>Petition Categories</h1>
+<!-- 
+  <div class="filter-container">
+    <button class="filter-button" onclick="toggleFilterForm()">Filter</button>
+  </div> -->
+
+  <form id="filter-form" class="filter-form" action="/blog/filter" method="get">
+    <label for="category">Category:</label>
+    <input type="text" id="category" name="category">
+    <label for="user">User:</label>
+    <input type="text" id="user" name="user">
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title">
+    <button type="button" onclick="submitFilterForm()">Submit</button>
+  </form>
+
+  <% blogs.forEach(blog => { %>
+    <h2 class="text-4xl mt-8 font-semibold text-center" style="background-color: #007BFF; color:white; padding: 5px;">Category: <%= blog.category %></h2>
+    <div class="grid gap-12 m-12 grid-cols-1 md:grid-cols-2 xl:grid-cols-3">
+      <% blog.projects.forEach(project => { %>
+        <% if (project.status !== 'pending') { %>
+          <div class="card">
+            <div class="card-content">
+              <% if (project.images && project.images.length > 0) { %>
+                <div class="image-gallery" style="display: flex; justify-content: center; flex-wrap: wrap;">
+                  <% project.images.forEach(image => { %>
+                    <img src="<%= image %>" alt="Project Image" style="width: 150px; height: 150px; object-fit: cover; margin: 5px; border-radius: 10px;">
+                  <% }); %>
+                </div>
+              <% } else { %>
+                <p>No images available for this project.</p>
+              <% } %>
+              <button class="enroll-button" onclick="enrollpetition('<%= project._id %>')">Enroll</button>
+              <p class="text-center text-sm text-gray-100 bg-gray-800 rounded-md py-1 mb-2">Users Enrolled: <%= project.usersEnrolled.length %></p>
+          
+              <div class="card-details">
+                Creator: <%= project.User %> <br>
+                Title: <%= project.title %><br>
+                Dated: <%= project.date %> <br>
+              </div>
+              <a href="https://api.whatsapp.com/send?text=Check out this petition: <%= project.title %> - <%= project.description.substring(0, 100) %> Enroll at https://bharatkenagrik.com/blog " 
+                class="whatsapp-share-button" 
+                target="_blank" 
+                style="display: inline-block; margin-top: 2px; background:#ff416c; color: white; padding: 2px 4px; border-radius: 2px; text-decoration: none;">
+               Share
+             </a>
+              <div id="<%= project._id %>" class="description short-description">
+                <p>Description: <span class="highlight"><%= project.description %></span></p>
+              </div>
+               
+              <span id="toggle-<%= project._id %>" class="toggle-description" onclick="toggleDescription('<%= project._id %>')">View More</span>
+          
+              <!-- WhatsApp Share Button -->
+               
+            </div>
+          </div>
+          
+        <% } %>
+      <% }) %>
+    </div>
+  <% }) %>
 </body>
 
 </html>
+
