--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+ 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -331,12 +332,13 @@
                 Title: <%= project.title %><br>
                 Dated: <%= project.date %> <br>
               </div>
-              <a href="https://api.whatsapp.com/send?text=Check out this petition: <%= project.title %> - <%= project.description.substring(0, 100) %> %0AEnroll at https://bharatkenagrik.com/blog %0AImage: <%= project.images[0] %>" 
+              <a href="https://api.whatsapp.com/send?text=Check out this petition: <%= project.title %> - <%= project.description.substring(0, 100) %> %0AEnroll at https://bharatkenagrik.com/blog" 
                 class="whatsapp-share-button" 
                 target="_blank" 
                 style="display: inline-block; margin-top: 2px; background:#ff416c; color: white; padding: 2px 4px; border-radius: 2px; text-decoration: none;">
                 Share
              </a>
+             
              
               <div id="<%= project._id %>" class="description short-description">
                 <p>Description: <span class="highlight"><%= project.description %></span></p>
